force-app/main/default/objects/Question_Response__c/Question_Response__c.object-meta.xml
<CustomObject>
    <description>A single answered question within a Survey_Response. For multi-choice questions, one record per selected option. Stores snapshots of question/answer text at write time.</description>
    <label>Question Response</label>
    <nameField>
        <displayFormat>QR-{0000000}</displayFormat>
        <label>Question Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>