force-app/main/default/objects/Question_Response__c/fields/Answer_Text_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Answer_Text_Snapshot__c</fullName>
    <description>Snapshot of the chosen option's text (or the free-text value for free-text questions) at submission time.</description>
    <label>Answer Text (Snapshot)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>