force-app/main/default/objects/Question_Response__c/fields/Free_Text_Value__c.field-meta.xml
<CustomField>
    <fullName>Free_Text_Value__c</fullName>
    <description>Value typed by the respondent. Used for free-text questions and for the "Other:___" companion of an option with Allows_Free_Text__c.</description>
    <label>Free Text Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>