force-app/main/default/objects/Question_Response__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Question this response answers. Kept as a reference for live data; long-term reporting should use the snapshot fields.</description>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Answered In</relationshipLabel>
    <relationshipName>Answered_In</relationshipName>
    <type>Lookup</type>
</CustomField>