force-app/main/default/objects/Question_Response__c/fields/Question_Text_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Question_Text_Snapshot__c</fullName>
    <description>Snapshot of Question__c.Question_Text__c at submission time. Frozen for reporting independence.</description>
    <label>Question Text (Snapshot)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>