force-app/main/default/objects/Question_Response__c/fields/Selected_Option__c.field-meta.xml
<CustomField>
    <fullName>Selected_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The option the respondent picked. For multi-choice questions there is one Question_Response record per selected option.</description>
    <label>Selected Option</label>
    <referenceTo>Answer_Option__c</referenceTo>
    <relationshipLabel>Picked In</relationshipLabel>
    <relationshipName>Picked_In</relationshipName>
    <type>Lookup</type>
</CustomField>