force-app/main/default/objects/Question_Response__c/fields/Survey_Name_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Survey_Name_Snapshot__c</fullName>
    <description>Snapshot of the Survey name at submission time.</description>
    <label>Survey Name (Snapshot)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>