force-app/main/default/objects/Question_Response__c/fields/Survey_Response__c.field-meta.xml
<CustomField>
    <fullName>Survey_Response__c</fullName>
    <description>Parent submission session. Master-detail so answers cascade-delete with their session.</description>
    <label>Survey Response</label>
    <referenceTo>Survey_Response__c</referenceTo>
    <relationshipLabel>Question Responses</relationshipLabel>
    <relationshipName>Question_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>