force-app/main/default/objects/Question_Response__c/fields/Survey_Version_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Survey_Version_Snapshot__c</fullName>
    <description>Snapshot of Survey__c.Version__c at submission time.</description>
    <label>Survey Version (Snapshot)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>